# ASC-ODE

./: .buildinfo  CMakeLists.txt  README.md  genindex.html  intro.html  main.html  objects.inv  search.html  searchindex.js
Ex1/: main.html
Ex2/: autodiff.html  electric-net.html  electric_net.html  explicitRK.html  implicitRK.html  main.html
Ex3/: experiments.html  upstream_test.html
_sources/: main.md
_sources/Ex2/: explicitRK.md  implicitRK.md  main.md
_sources/Ex3/: experiments.md  upstream_test.md
demos/: demo_autodiff.cpp  electric_network_demo.cpp  legendre.cpp  pendulumAD.cpp  plotelectricnetwork.py  test_ode.cpp
docs/: _config.yml  _toc.yml  intro.md
docs/Ex1/: _config.yml  _toc.yml  main.md
docs/Ex1/_build/.doctrees/: environment.pickle  main.doctree
docs/Ex1/_build/html/: .buildinfo
docs/Ex2/: autodiff.md  electric-net.md  electric_net.md  explicitRK.md  main.md
docs/Ex3/: crane.ipynb  experiments.md  mass_spring.ipynb  spinningTop.ipynb.bak  upstream_test.md
mechsystem/: bind_mass_spring.cpp  crane.ipynb  mass_spring.hpp  mass_spring.ipynb  spinningTop.ipynb  test_mass_spring.py
src/: autodiff.hpp  explicitRK.hpp  implicitRK.hpp  timestepper.hpp
