cmake_minimum_required(VERSION 3.20)
project(ASC_ode)

set (CMAKE_CXX_STANDARD 20)


include_directories(src nanoblas/src)

add_subdirectory (src)
add_subdirectory (nanoblas)

add_compile_options(-fpermissive)

add_subdirectory (mechsystem)

add_executable (test_ode demos/test_ode.cpp)
target_link_libraries (test_ode PUBLIC nanoblas)

add_executable (demo_autodiff demos/demo_autodiff.cpp)
target_link_libraries (demo_autodiff PUBLIC nanoblas)

add_executable (legendre demos/legendre.cpp)
target_link_libraries (legendre PUBLIC nanoblas)

add_executable (pendulumAD demos/pendulumAD.cpp)
target_link_libraries (pendulumAD PUBLIC nanoblas)

add_executable (electric_network demos/electric_network_demo.cpp)
target_link_libraries (electric_network PUBLIC nanoblas)
